# covert_channel

./: CMakeLists.txt  client.cpp  client.h  main.cpp  morse.cpp  morse.h  readme.md  server.cpp  server.h
lib/linux/: libCppUnit.so.1  libCppUnitd.so.1  libPocoCrypto.so.50  libPocoCryptod.so.50  libPocoData.so.50  libPocoDataSQLite.so.50  libPocoDataSQLited.so.50  libPocoFoundation.so.50  libPocoJSON.so.50  libPocoJSONd.so.50  libPocoNet.so.50  libPocoNetSSL.so.50  libPocoNetSSLd.so.50  libPocoRedis.so.50  libPocoRedisd.so.50  libPocoUtil.so.50  libPocoUtild.so.50  libPocoXML.so.50  libPocoXMLd.so.50  libPocoZip.so.50  libPocoZipd.so.50
